# data_bro

./: .env.example  .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP_recovered.md  WORKSPACE  actual_plan.md  best_plan.md  docker-compose.yml  extract_plan.py  full_convo_log.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-ingestion-backbone/: 01-CONTEXT.md  01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-storage-auth-foundation/: 02-CONTEXT.md  02-PLAN.md  02-RESEARCH.md  02-SUMMARY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
auth/: main.py  requirements.txt
auth/alembic/: env.py
auth/tests/: conftest.py  test_auth.py  test_integration.py
backtest/: main.py  requirements.txt
cpp_signals/: CMakeLists.txt  edge_gateway.cpp  indicators.cpp  nash_sizing.cpp  test.cpp
data/: ticks.csv
db/: init.sql  init_cockroach.sql  init_timescale.sql
gpu_sentiment/: Dockerfile  compile_cuda.sh  gpu_sentiment.py  main.py  requirements.txt  sentiment_cuda.cu
ingest/: Cargo.toml  Dockerfile  build.rs
ingest/src/: fhe.rs  main.rs  pqc.rs  zkp.rs
ingest/tests/: roundtrip.rs  test_csv_load.rs
k8s/: auth-deployment.yaml  backtest-deployment.yaml  configmap.yaml  cpp-signal-deployment.yaml  gpu-sentiment-deployment.yaml  ingest-deployment.yaml  ingestion-pod.yaml  ingress.yaml  istio-gateway.yaml  postgres-deployment.yaml  pvc.yaml  questdb-deployment.yaml  redis-deployment.yaml  risk-deployment.yaml  secrets.yaml  signal-deployment.yaml  ui-deployment.yaml
nginx/: nginx.conf
proto/: BUILD.bazel  market_data.proto  market_event.fbs
risk/: main.py  requirements.txt
signal/: Dockerfile  indicators.py  main.py  marl_engine.py  multimodal_fusion.py  quantum_optimizer.py  requirements.txt  sentiment.py
signal/tests/: test_metrics.py  test_signal.py  test_websocket.py
stream/: Cargo.toml  Dockerfile  pom.xml
stream-quarkus/: Dockerfile  pom.xml
stream/src/: main.rs
stream/src/main/java/com/nexus/stream/: IngestionJob.java
ui/: Dockerfile.prod  cypress.config.js  index.html  nginx-ui.conf  package-lock.json  package.json
ui/cypress/e2e/: signal-flow.cy.js
ui/src/: App.tsx
(+28 files in other folders)
