[package]
name = "nexus-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
bytes = "1"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
backoff = { version = "0.4", features = ["tokio"] }

[build-dependencies]
prost-build = "0.12"
