[package]
name = "nexus-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
flatbuffers = "23.5.26"
aeron-rs = "0.1.0"
hex = "0.4"
prost = "0.12"
prost-types = "0.12"
bytes = "1"
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.22"
backoff = { version = "0.4", features = ["tokio"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.12"
flatc-rust = "0.2"
