[package]
name = "nexus-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
arroyo-worker = "0.10.0" # Scaffolded: High-performance Rust-native stream processor
arroyo-datastream = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
